<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <!-- ================= CONTENT ================= -->

    <!-- BACK -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:clickable="true"
        android:focusable="true" />

    <!-- HEADER -->
    <LinearLayout
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBack"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsmedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppinsbold"
            android:lineSpacingExtra="-9dp"/>
    </LinearLayout>

    <!-- CARD -->

    <!-- ================= BOTTOM NAV ================= -->

    <LinearLayout
        android:id="@+id/cardBook"
        android:layout_width="wrap_content"
        android:layout_height="351dp"
        android:layout_above="@id/bottomNav"
        android:layout_below="@id/headerText"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="138dp"
        android:background="@drawable/bc_book"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnRukunIslam"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:contentDescription="@string/rukun_islam"
                android:src="@drawable/ic_islam" />

            <ImageView
                android:id="@+id/btnRukunIman"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:contentDescription="@string/rukun_iman"
                android:src="@drawable/ic_iman" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnIhsan"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:contentDescription="@string/ihsan"
                android:src="@drawable/ic_ihsan" />

            <ImageView
                android:id="@+id/btnPilarAmal"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:contentDescription="@string/pilar_amal"
                android:src="@drawable/ic_pilar" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/ic_bcbutton"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/navAlarm"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_alarmg"
            app:tint="#FFFFFF"/>

        <ImageView
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_homeg"
            app:tint="#FFFFFF"/>

        <ImageView
            android:id="@+id/navAdd"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_setting"
            app:tint="#FFFFFF"/>
    </LinearLayout>

</RelativeLayout>
