<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningActivity">

    <!-- ================= BACKGROUND ================= -->
    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_bc1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ================= FLAG / LANGUAGE ================= -->
    <LinearLayout
        android:id="@+id/lang_container"
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/ic_bcflag"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_flag"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_idn"/>

        <TextView
            android:id="@+id/txt_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/lang_code"
            android:textColor="#000000"
            android:textSize="12sp"/>
    </LinearLayout>

    <!-- ================= GREETING ================= -->

    <!-- ================= SKIP ================= -->

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="339dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="176dp"
        android:fontFamily="@font/poppinssemibold"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-4dp"
        android:text="@string/greeting"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ================= NEXT ================= -->

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="96dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_next"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="88dp"
        android:src="@drawable/ic_next"
        android:tint="#000000"
        app:backgroundTint="#D9D9D9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
